# metronome-gui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  test_display.rs
.kiro/specs/cli-metronome/: design.md  requirements.md  tasks.md
src/: error.rs  lib.rs  main.rs  models.rs
src/app/: launcher.rs  mod.rs
src/audio/: mod.rs
src/cli/: mod.rs
src/display/: mod.rs
src/gui/: app.rs  mod.rs
src/metronome/: mod.rs
tests/: audio_tests.rs  dual_mode_tests.rs  gui_tests.rs  integration_tests.rs
