[package]
name = "cli-metronome"
version = "0.1.0"
edition = "2021"
description = "A cross-platform CLI metronome application"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rodio = { version = "0.17", optional = true }
thiserror = "1.0"
ctrlc = "3.4"
egui = { version = "0.24", optional = true }
eframe = { version = "0.24", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "time"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["audio", "gui"]
audio = ["rodio"]
gui = ["egui", "eframe", "tokio", "serde", "serde_json"]
